--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Storm Scouter 2015-16</string>
+    <string name="app_name">Storm Scouter Radar 2015-16</string>
     <string name="teamName">Team Number</string>
     <string name="matchNum">Match Number</string>
     <string name="red">Red</string>
@@ -13,7 +13,6 @@
     <string name="storm">Storm Robotics</string>
     <string name="title_activity_match">MatchActivity</string>
     <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
     <string name="exit">Return to Main Screen</string>
     <string-array name="autoDefenses">
         <item name="ptc">Portcullis</item>
@@ -36,6 +35,8 @@
         <item name="sp">Sally Port</item>
         <item name="rw">Rock Wall</item>
         <item name="rt">Rough Terrain</item>
+    </string-array>
+    <string-array name="low">
         <item name="lb">Low Bar</item>
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
