--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
         <item name="na">None(Spy position)</item>
     </string-array>
     <string-array name="defenses">
+        <item>Select</item>
         <item name="ptc">Portcullis</item>
         <item name="cdf">Cheval de Frise</item>
         <item name="rmp">Ramparts</item>
